# ci-actions

./: Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: integration_tests.yml  release.yml
src/: main.rs
tests/: create-demo-repo.sh  create-dummy-repo.sh
